# WASListener

./: .gitattributes  .gitignore  .gitmodules  LICENSE  ide.asn  readme.htm  readme.md
3gl/: CMakeLists.txt
3gl/WASListener/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  FileAction.cpp  FileAction.h  FolderWatcher.cpp  FolderWatcher.h  Notifications.cpp  Notifications.h  Uniface.cpp  Uniface.h  WASListener.cpp  WASListener.rc  resource.h
IdePlugin/: WASlistener.asn  readme.md
IdePlugin/WorkArea/aps/: uapc.xml  uapm.xml  uaps.xml  uapu.xml
IdePlugin/WorkArea/cpt/: ucdsp.xml  ucesv.xml  ucfrm.xml  ucfrn.xml  ucrpt.xml  ucsvc.xml  ucusp.xml  umdsp.xml  umesv.xml  umfrm.xml  umfrn.xml  umrpt.xml  umsvc.xml  umusp.xml  upalette_dsp.xml  upalette_frm.xml  upalette_rpt.xml  upalette_svc.xml  upalette_usp.xml  vc_aps.xml  vc_cpt.xml  vc_dtd.xml  vc_ent.xml  vc_libdnd.xml  vc_libdvc.xml  vc_libein.xml  vc_libfin.xml  vc_libfla.xml  vc_libfsy.xml  vc_libgly.xml  vc_libinc.xml  vc_libktt.xml  vc_libmen.xml  vc_libmsg.xml  vc_libpnl.xml  vc_libprc.xml  vc_libsnp.xml  vc_libvar.xml  vc_main.xml  vc_prj.xml  (+4 more)
IdePlugin/WorkArea/ent/: pratt.printer.xml  uappl.dict.xml  ucdtyp.dict.xml  ucfield.dict.xml  ucgroup.dict.xml  uckey.dict.xml  ucrelsh.dict.xml  uctable.dict.xml  udicver.dict.xml  udvc.dict.xml  uent.model.xml  uentdb.model.xml  uenttable.model.xml  uentview.model.xml  uform.dict.xml  uformat.dict.xml  (+86 more)
WorkArea/aps/: uapu.xml
WorkArea/cpt/: ucdsp.xml  ucesv.xml  ucfrm.xml  umesv.xml  umsvc.xml  umusp.xml  upalette_dsp.xml  upalette_svc.xml  vc_cpt.xml  vc_ent.xml  vc_libdnd.xml  vc_libdvc.xml  vc_libein.xml  vc_libfla.xml  vc_libinc.xml  vc_libmen.xml  vc_libmsg.xml  vc_libvar.xml  vc_main.xml  vc_prj.xml  vc_sig.xml  vc_udo.xml  vc_updated.xml
WorkArea/ent/: pratt.printer.xml  uappl.dict.xml  ucdtyp.dict.xml  ucfield.dict.xml  uctable.dict.xml  udicver.dict.xml  udvc.dict.xml  uent.model.xml  uentdb.model.xml  uentview.model.xml  uform.dict.xml  uformat.dict.xml  ugfif.dict.xml  ugflay.dict.xml  ugfsyn.dict.xml  uinc.dict.xml  uktt.dict.xml  ulibfla.dict.xml  ulibfsy.dict.xml  ulibgly.dict.xml  ulibmen.dict.xml  ulibmsg.dict.xml  ulibpnl.dict.xml  ulibvar.dict.xml  umsg.dict.xml  uobj.text.xml  upalette_ent.u.xml  uprc.dict.xml  urefcpt.dict.xml  ureflibdnd.dict.xml  ureflibein.dict.xml  ureflibfin.dict.xml  ureflibgly.dict.xml  ureflibsnp.dict.xml  ureflibvar.dict.xml  urefprj.dict.xml  usitem.dict.xml  usmenu.dict.xml  usnp.dict.xml  usource.dict.xml  (+11 more)
WorkArea/libfla/: lib.xml
WorkArea/libfsy/: lib.xml
WorkArea/libinc/: vc.xml
WorkArea/libprc/: upalette_libprc.xml
WorkArea/libsnp/: uhtml_common.xml  uscript_aps.xml  uscript_esv.xml  uscript_rpt.xml  uscript_ssv.xml  uscript_usp.xml
WorkArea/prj/: data.xml  upalette_prj.xml  utemplates.xml
listener/: CMakeLists.txt  readme.md  vcpkg.json
listener/WASListener/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  FolderWatcher.cpp  FolderWatcher.h  Notifications.cpp  ReadMe.txt  Uniface.cpp  Uniface.h  WASListener.exe.manifest  WASListener.h
(+66 files in other folders)
